<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/tv_instructions" />

    <FrameLayout
        android:id="@+id/fl_water_increment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_local_drink_24"
            android:scaleType="fitCenter"
            android:onClick="incrementWater"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="64"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_water_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/default_water_count"
                android:textSize="35sp"
                android:textColor="#424242"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:visibility="invisible"/>

        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_charge_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_power_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/charging_desc"
            android:src="@drawable/ic_baseline_power_24"/>

        <TextView
            android:id="@+id/tv_charging_remainder_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_power_increment"
            android:layout_marginEnd="16dp"
            android:text="@string/default_charge_notification_count" />

    </RelativeLayout>

</LinearLayout>